--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@ body{
   background-color: #f5f6fa;
 }
 
+.app{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
 .app__header{
   display: flex;
   align-items: center;
@@ -17,3 +23,4 @@ body{
   display: flex;
   justify-content: space-between;
 }
+
