country data now displays on console

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,12 @@ body{
   justify-content: space-between; 
 }
 
+/*app__left uses 90 percent of screen*/
+.app__left{
+  flex: 0.9;
+}
+
+
 .app__stats{
   display: flex;
   justify-content: space-between;
