--- a/src/Map.css
+++ b/src/Map.css
@@ -7,12 +7,12 @@
   box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
 }
 
-/* .map .leaflet-container {
+ .map .leaflet-container {
   height: 100%;
   border-radius: 12px;
 }
 
-.info-flag img {
+/* .info-flag img {
   width: 100px;
   border-radius: 5px;
 }
