--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -13,6 +13,7 @@
     margin-bottom: 0.5rem;
   }
   
+/* !important = overriding material.UI  */
   .infoBox__total {
     color: #6c757d;
     font-weight: 700 !important;
