--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,15 @@ body{
   padding: 20px;
 }
 
+.app__dropdown{
+  background-color: white;
+}
+
+.app__header > h1{
+  color: #fc3c3c;
+  font-size: 2rem;
+}
+
 .app__header{
   display: flex;
   align-items: center;
