line graph is now spaced out

--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,30 @@ body{
   flex: 0.9;
 }
 
-
 .app__stats{
   display: flex;
   justify-content: space-between;
 }
 
+.app__right{
+  display: flex;
+  flex-direction: column;
+}
+
+.app__right .MuiCardContent-root {
+  
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app__graph{
+  flex-grow: 1;
+}
+
+.app__graphTitle{
+  margin-top: 20px;
+}
 /*when the screen breaks the length limit, do this*/
 @media (max-width: 990px){
   .app{
