--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ body{
 
 .app__graphTitle{
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 /*when the screen breaks the length limit, do this*/
 @media (max-width: 990px){
